Restructure project with proper data organization and configuration
- Move txt files to data/raw/txt/
- Move tantivy index to data/tantivy_index/
- Add data/lancedb_index/ for future LanceDB integration
- Extract configuration to config.toml using serde/toml
- Add config.rs module with proper Rust configuration patterns
- Update all binaries to use configuration-driven paths
- Update .gitignore for new data structure
- Maintain deterministic facet allocation with configurable categories

--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,12 @@
 Cargo.lock
 
 # Tantivy indexes
-/tantivy_index/
+data/tantivy_index/
 *.idx
 
 # Data directories and files
-/data/
+data/raw/
+data/lancedb_index/
 /TXT/
 *.txt
 *.zip
