fix: update data directory structure and disable CI
- Change data directory from 'data' to 'dev_data' in all configs
- Remove redundant '_dev' suffix from index directories
- Disable GitHub CI workflow (can be re-enabled later)
- Add dev_data/ to .gitignore to prevent committing data files

--- a/config.dev.toml
+++ b/config.dev.toml
@@ -3,9 +3,9 @@
 
 [data]
 # Data directory structure
-raw_txt_dir = "data/raw/txt"
-tantivy_index_dir = "data/tantivy_index_dev"
-lancedb_index_dir = "data/lancedb_index_dev"
+raw_txt_dir = "dev_data"
+tantivy_index_dir = "dev_data/tantivy_index"
+lancedb_index_dir = "dev_data/lancedb_index"
 
 [search]
 # Search configuration - smaller limits for dev
