feat: restructure workspace into search/ and elt/ directories
- Move Rust search system to search/ directory
- Create Python ELT pipeline in elt/ directory
- Add shared data/ directory structure
- Create utility scripts for both systems
- Update .gitignore for Python and new structure
- Add comprehensive documentation
- Update configuration paths for new structure

Architecture:
- search/ - Rust hybrid search system (Tantivy + LanceDB)
- elt/ - Python data processing pipeline (unstructured + langchain)
- data/ - Shared data directory for both systems
- scripts/ - Utility scripts for setup and execution

--- a/search/config.dev.toml
+++ b/search/config.dev.toml
@@ -3,9 +3,9 @@
 
 [data]
 # Data directory structure
-raw_txt_dir = "dev_data"
-tantivy_index_dir = "dev_data/tantivy_index"
-lancedb_index_dir = "dev_data/lancedb_index"
+raw_txt_dir = "../data/raw"
+tantivy_index_dir = "../data/indexes/tantivy"
+lancedb_index_dir = "../data/indexes/lancedb"
 
 [search]
 # Search configuration - smaller limits for dev
