--- a/search/config.prod.toml
+++ b/search/config.prod.toml
@@ -3,9 +3,9 @@
 
 [data]
 # Data directory structure
-raw_txt_dir = "../data/raw"
-tantivy_index_dir = "../data/indexes/tantivy"
-lancedb_index_dir = "../data/indexes/lancedb"
+raw_txt_dir = "../dev_data/raw"
+tantivy_index_dir = "../dev_data/indexes/tantivy"
+lancedb_index_dir = "../dev_data/indexes/lancedb"
 
 [search]
 # Search configuration - production limits
