refactor: rename elt to etl throughout codebase
- Rename elt/ directory to etl/
- Update all references in documentation and scripts
- Rename run_elt_pipeline.sh to run_etl_pipeline.sh
- Update pyproject.toml package name and entry points
- Update config file references from elt_config.yaml to etl_config.yaml
- Update all README and documentation references
- Maintain consistency with ETL (Extract, Transform, Load) terminology

--- a/etl/pyproject.toml
+++ b/etl/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "universe-elt"
+name = "universe-etl"
 version = "0.1.0"
 description = "Extract, Load, Transform pipeline for document processing"
 authors = [
@@ -45,11 +45,11 @@ dev = [
 ]
 
 [project.scripts]
-universe-elt = "elt.cli:main"
+universe-etl = "etl.cli:main"
 
 [tool.setuptools.packages.find]
 where = ["."]
-include = ["elt*"]
+include = ["etl*"]
 
 [tool.black]
 line-length = 88
