--- a/search/Cargo.toml
+++ b/search/Cargo.toml
@@ -2,6 +2,7 @@
 name = "tantivy-lancedb-hybrid-search"
 version = "0.1.0"
 edition = "2021"
+
 authors = ["Your Name <your.email@example.com>"]
 description = "A production-ready hybrid search system combining Tantivy (text search) with LanceDB (vector search)"
 license = "MIT"
@@ -43,3 +44,5 @@ twox-hash = "1.6"
 anyhow = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.8"
+figment = { version = "0.10", features = ["env", "toml"] }
+serde_json = "1.0"
