--- a/search/Cargo.toml
+++ b/search/Cargo.toml
@@ -46,3 +46,7 @@ serde = { version = "1.0", features = ["derive"] }
 toml = "0.8"
 figment = { version = "0.10", features = ["env", "toml"] }
 serde_json = "1.0"
+
+[[bin]]
+name = "interactive_search"
+path = "src/interactive_search.rs"
