--- a/search/config.toml
+++ b/search/config.toml
@@ -2,7 +2,7 @@
 
 [data]
 # Data directory structure
-raw_txt_dir = "../dev_data/raw"
+raw_txt_dir = "../dev_data/txt"
 tantivy_index_dir = "../dev_data/indexes/tantivy"
 lancedb_index_dir = "../dev_data/indexes/lancedb"
 
@@ -13,8 +13,8 @@ max_limit = 100
 fuzzy_max_distance = 4
 
 [facets]
-# Facet configuration
-categories = ["tech/math", "tech/it", "lit/fiction", "lit/romcom"]
+# Facet configuration - using directory-based facets from actual data structure
+# categories = ["agriculture", "foraging", "survival", "homesteading", "hunting", "disasterPrep", "firstAid", "foodPreservation", "firecraft", "fishing", "knotsCordage", "shelters", "trappingSnaring", "weapons", "misc"]
 
 [embedding]
 # Embedding configuration
