--- a/crates/localdb-vector/Cargo.toml
+++ b/crates/localdb-vector/Cargo.toml
@@ -8,8 +8,8 @@ anyhow = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 indicatif = "0.17"
 lancedb = "~0.22"
-arrow-array = "~55.0"
-arrow-schema = "~55.0"
+arrow-array = "^55.1"
+arrow-schema = "^55.1"
 futures = "0.3"
 tokio = { version = "1.0", features = ["full"] }
 localdb-core = { path = "../localdb-core" }
