--- a/crates/localdb-text/Cargo.toml
+++ b/crates/localdb-text/Cargo.toml
@@ -4,8 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-anyhow = "1.0"
-walkdir = "2.5"
-tantivy = "~0.24"
+anyhow = { workspace = true }
+walkdir = { workspace = true }
+tantivy = { workspace = true }
 localdb-core = { path = "../localdb-core" }
-
