--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,35 @@ unwrap_used = "deny"
 [workspace.metadata]
 localdb = { enforce_fmt = true, enforce_clippy = true }
 
+[workspace.dependencies]
+anyhow = "1.0"
+thiserror = "1.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+figment = { version = "0.10", features = ["env", "toml"] }
+walkdir = "2.5"
+tempfile = "3.0"
+indicatif = "0.17"
+futures = "0.3"
+tokio = { version = "1.0", features = ["full"] }
+tokenizers = "~0.15"
+candle-core = "~0.9"
+candle-nn = "~0.9"
+candle-transformers = "~0.9"
+twox-hash = "1.6"
+tantivy = "~0.24"
+lancedb = "~0.22"
+arrow-array = "^55.1"
+arrow-schema = "^55.1"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+
+# Speed up dev builds with sccache by caching dependencies while
+# keeping fast incremental builds for your local crates.
+[profile.dev]
+incremental = true
+
+# Disable incremental for all dependency packages so sccache can
+# effectively cache their artifacts.
+[profile.dev.package."*"]
+incremental = false
