--- a/crates/localdb-core/Cargo.toml
+++ b/crates/localdb-core/Cargo.toml
@@ -4,12 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-anyhow = "1.0"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-figment = { version = "0.10", features = ["env", "toml"] }
-walkdir = "2.5"
-thiserror = "1.0"
+anyhow = { workspace = true }
+serde = { workspace = true, features = ["derive"] }
+serde_json = { workspace = true }
+figment = { workspace = true }
+walkdir = { workspace = true }
+thiserror = { workspace = true }
+shellexpand = "3.1"
 
 [dev-dependencies]
-tempfile = "3.0"
+tempfile = { workspace = true }
