--- a/crates/localdb-embed/Cargo.toml
+++ b/crates/localdb-embed/Cargo.toml
@@ -4,17 +4,16 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-anyhow = "1.0"
-tokenizers = { version = "~0.15" }
-candle-core = { version = "~0.9" }
-candle-nn = { version = "~0.9" }
-candle-transformers = { version = "~0.9" }
-twox-hash = "1.6"
-serde_json = "1.0"
+anyhow = { workspace = true }
+tokenizers = { workspace = true }
+candle-core = { workspace = true }
+candle-nn = { workspace = true }
+candle-transformers = { workspace = true }
+twox-hash = { workspace = true }
+serde_json = { workspace = true }
 localdb-core = { path = "../localdb-core" }
 
 [features]
 default = ["metal"]
 metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
 cpu = []
-
