--- a/etl/config/etl_config.yaml
+++ b/etl/config/etl_config.yaml
@@ -6,7 +6,7 @@ extraction:
     ocr_languages: ["eng"]
   image:
     ocr_languages: ["eng"]
-  supported_formats: ["pdf", "docx", "jpg", "jpeg", "png", "tiff"]
+  supported_formats: ["pdf", "docx", "doc", "html", "htm", "md", "txt", "rtf", "epub", "msg", "eml", "jpg", "jpeg", "png", "tiff", "tif", "bmp", "gif"]
 
 chunking:
   chunk_size: 1000
